--- a/assessment.html
+++ b/assessment.html
@@ -11,6 +11,6 @@
 </script>
 </head>
 <body>
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSoORjdug1Uc8sCOHQnj1tqxVdhm4SIv_nhV4EtaEnKyqduHmi-XyxxuBoE9EYgfQ-IsAcUwDA-9Bpo/pubhtml?widget=true&amp;headers=false"></iframe>
-</body>
+<embed src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSoORjdug1Uc8sCOHQnj1tqxVdhm4SIv_nhV4EtaEnKyqduHmi-XyxxuBoE9EYgfQ-IsAcUwDA-9Bpo/pub?embedded=true" width="100%" style="height: -webkit-fill-available">
+  </body>
 </html>
