--- a/assessment.html
+++ b/assessment.html
@@ -11,6 +11,6 @@
 </script>
 </head>
 <body>
-<iframe src="https://docs.google.com/spreadsheets/d/1quACr-V5NWmHByFUUXHYHu_7PHD4Tc6oL5ertg8yZa4/edit#gid=1840458933" width="100%"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1quACr-V5NWmHByFUUXHYHu_7PHD4Tc6oL5ertg8yZa4/edit#gid=1840458933" width="100%" height="100%"></iframe>
   </body>
 </html>
