--- a/assessment.html
+++ b/assessment.html
@@ -14,6 +14,9 @@
     var endTime = new Date().getTime();
     var timeSpent = endTime - startTime;
 // Set up event handler to produce text for the window focus event
+document.onload = function(){
+  startTime = new Date().getTime();
+};
     
 document.onvisibilitychange = function() { 
   console.log("Visibility of page has changed!");
