--- a/iframe.html
+++ b/iframe.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <iframe src="http://pipplet-preprod2.herokuapp.com/users/sign_in" allow="camera; microphone"
+  <iframe src="https://pipplet-preprod2.herokuapp.com/users/sign_in" allow="camera; microphone"
     sandbox="allow-forms allow-scripts" width="100%" height="100%" frameborder="0"></iframe>
 </body>
 
